<resources>
    <string name="app_name">Wypożyczalnia strojów</string>
    <string name="wypozycz_strojj">Wypożycz strój</string>
    <string name="zwroc_stroj">Zwróc strój</string>
    <string name="dodaj_stroj">Dodaj strój</string>
    <string name="nameText">Imię</string>
    <string name="surnameText">Nazwisko</string>
    <string name="addressText">Adres zamieszkania</string>
    <string name="numberText">Numer telefonu</string>
    <string name="termText">Termin wypożyczenia:</string>
    <string name="costText">Cena</string>
    <string name="depositText">Kaucja</string>
    <string name="pickClient">Wybierz klienta</string>
    <string name="toText">Do</string>
    <string name="fromText">Od</string>
    <string name="priceText">Cena</string>
    <string name="addOutfits">Dodaj stroje</string>
    <string name="generateAgreement">Generuj umowę</string>


</resources>