<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">




    <Button
        android:id="@+id/rent_button"
        android:layout_width="220dp"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="90dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="90dp"
        android:text="@string/wypozycz_strojj" />

    <Button
        android:id="@+id/return_button"
        android:layout_width="220dp"
        android:layout_height="60dp"
        android:layout_below="@+id/rent_button"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="90dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="90dp"
        android:text="@string/zwroc_stroj" />

    <Button
        android:id="@+id/add_button"
        android:layout_width="220dp"
        android:layout_height="60dp"
        android:layout_below="@+id/return_button"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="90dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="90dp"
        android:text="@string/dodaj_stroj" />
</RelativeLayout>