<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RentActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/nameTextEdit"
        android:layout_width="248dp"
        android:layout_height="58dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="14dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="150dp"
        android:hint="@string/nameText"
        android:textColorHint="#616161" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/surnameText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/surnameTextEdit"
        android:layout_width="248dp"
        android:layout_height="58dp"
        android:layout_below="@+id/nameTextEdit"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="14dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="150dp"
        android:hint="@string/surnameText"
        android:textColorHint="#757575" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/addressText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/addressTextEdit"
        android:layout_width="248dp"
        android:layout_height="58dp"
        android:layout_below="@+id/surnameTextEdit"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="14dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="150dp"
        android:hint="@string/addressText"
        android:textColorHint="#757575" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/numberText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </com.google.android.material.textfield.TextInputLayout>

</RelativeLayout>